# Advent_of_Code

./: .gitignore  01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  13.py  14.py  15.py  16.py  16.xlsx  README.md  pyproject.toml  utils.py
src/: 01.py  day_01.py  day_02.py  day_03.py  day_04.py  utils.py
test/: test_01.py  test_02.py  test_03.py  test_04.py
